C06 Make gap smaller, fix input focus, add hover

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -107,6 +107,7 @@ body {
   text-decoration: none;
   font-weight: 600;
   box-shadow: 0px 8px 2px rgba(62, 60, 73, 0.4);
+  transition: all 0.3s ease 0s;
 }
 .show {
   visibility: visible;
