--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,9 @@
       padding-right: 4px;
       color: $white;
     }
+    &:hover {
+      background-color: hsl(248, 32%, 59%);
+    }
   }
 
   &__form {
@@ -68,10 +71,13 @@
     line-height: 18px;
     display: flex;
     align-items: center;
-    border: 1px solid $grayishBlue;
+    border: 1px solid $darkBlue;
     border-radius: 8px;
     padding-left: 32px;
     padding-right: 32px;
+    &:focus {
+      outline-color: $blue;
+    }
   }
 
   &__submit {
@@ -83,6 +89,9 @@
     box-shadow: 0px 8px 2px rgba(7, 95, 57, 0.4);
     cursor: pointer;
     margin-bottom: 24px;
+    &:hover {
+      background-color: hsl(154, 59%, 61%);
+    }
   }
 
   &__terms {
